2000-12-11  Neil Booth  <neilb@earthling.net>

        * cpperror.c (print_location): New function.
        (print_containing_files): Simplify.
        (_cpp_begin_message): Simplify and use print_location.
        * cppfiles.c (stack_include_file): Update.
        (_cpp_pop_file_buffer): Update.
        * cpphash.h (struct cpp_buffer): New members
        include_stack_listed and type.   
        * cpplib.c (_cpp_handle_directive): Buffer->inc is not null.
        (run_directive): Take buffer type.  cpp_push_buffer cannot fail.
        (_cpp_do__Pragma, cpp_define, _cpp_define_builtin, cpp_undef,
        handle_assertion): Update.
        (cpp_push_buffer): Take a buffer type and file name.
        (cpp_pop_buffer): Update.  Clear include_stack_listed.
        * cpplib.h (input_stack_listing_current): Remove.
        (enum cpp_buffer_type): New.
        (cpp_push_buffer): New prototype.
        * cppmacro.c (builtin_macro): Simplify; buffer cannot be null.
        * fix-header.c (read_scan_file): Update.

2000-12-10  Robert Lipe <robertlipe@usa.net>

	* install.texi (i*86-*-sco3.2v5*): Remove information duplicated
	in html version.

2000-12-10  Richard Henderson  <rth@redhat.com>

	* genrecog.c (find_operand): Handle 'V' format code.
	(find_matching_operand): New.
	(validate_pattern): Accept '=' for an in-out operand if there
	is another operand with a matching constraint.

	* config/i386/i386.md (andqi_ext_0_cc): Use matching constraint
	for op1 to op0.

2000-12-10  Richard Henderson  <rth@redhat.com>

	* genrecog.c (validate_pattern) [STRICT_LOW_PART]: Fix thinko.

2000-12-09  Richard Henderson  <rth@redhat.com>

	* genrecog.c (validate_pattern): Verify that ZERO_EXTRACT and 
	STRICT_LOW_PART as SET_DEST have in-out constraints.

2000-12-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* c-common.c (check_function_format): Don't suggest adding format
	attributes to functions with no parameter to which to add them.

2000-12-09  Nick Clifton  <nickc@redhat.com>
